--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
-spring.application.name=todo
+===============================================
+
+Spring Data Source Configuration (MySQL)
+
+===============================================
+
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=dbuser
+spring.datasource.password=dbpassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+===============================================
+
+Spring Data JPA/Hibernate Configuration
+
+===============================================
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+===============================================
+
+Application Server Port
+
+===============================================
+
+server.port=8080
