--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,14 @@
-===============================================
+spring.datasource.url=jdbc:h2:mem:todo_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-Spring Data Source Configuration (MySQL)
-
-===============================================
-
-spring.datasource.url=jdbc:mysql://localhost:3306/todo_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=dbuser
-spring.datasource.password=dbpassword
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-===============================================
-
-Spring Data JPA/Hibernate Configuration
-
-===============================================
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-===============================================
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-Application Server Port
-
-===============================================
-
-server.port=8080
+server.port=8081
